--- a/index.html
+++ b/index.html
@@ -87,28 +87,26 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="#about">About</a>
                         </li>
+                    
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="interior.html">Interior</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">VFX</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#games">Animation</a>
                         </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="#games">Interior</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="#games">VFX</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="#games">Career</a>
-                        </li>
+                       
 
 
                         <li class="nav-item">
                             <a class="nav-link" href="#team">Team</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="careers.html">Careers</a>
+                            <a class="nav-link" href="careers.html">Career</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
@@ -598,7 +596,7 @@
                         <div id="contact-info">
                             <ul>
                                 <li><i class="fa fa-phone"></i><p>Phone: <span class="colored"><a href="tel:+8801752926765">+8801752926765</a></span></p></li>
-                                <li><i class="fa fa-envelope"></i><p>Email: <span class="colored"><a href="mailto:office@example.com">rodrigo3dexe@gmail.com</a></span></p></li>
+                                <li><i class="fa fa-envelope"></i><p>Email: <span class="colored"><a href="mailto:support@rodrigoexe.com">support@rodrigoexe.com</a></span></p></li>
                                 <li><i class="fa fa-globe"></i><p>Website: <span class="colored"><a href="rodrigoexe.com" target="_blank">rodrigoexe.com</a></span></p></li>
                                 <li><i class="fa fa-map-marker"></i><p>Address: <span class="colored">House No 64, 2nd floor, Word no 09, Sheikhpara, Rajshahi 6000</span></p></li>
                             </ul>
