--- a/interior.html
+++ b/interior.html
@@ -206,7 +206,7 @@
                             <div class="overlay">
                                 <i class="fa fa-play fa-3x"></i>
                             </div>
-                            <img src="images/placeholder.jpg" data-src="images/b_1.jpg" class="img-fluid b-lazy" alt="video thumbnail"> <!-- Video Thumbnail Img -->
+                            <img src="images/placeholder.jpg" data-src="images/b_1.JPG" class="img-fluid b-lazy" alt="video thumbnail"> <!-- Video Thumbnail Img -->
                         </a>
                     </div>
                     <div class="col-lg-12 col-xl-7 game-card-right">
@@ -256,7 +256,7 @@
                 <div class="overlay">
                     <i class="fa fa-play fa-3x"></i>
                 </div>
-                <img src="images/placeholder.jpg" data-src="images/b_2.jpg" class="img-fluid b-lazy" alt="video thumbnail"> <!-- Video Thumbnail Img -->
+                <img src="images/placeholder.jpg" data-src="images/b_2.JPG" class="img-fluid b-lazy" alt="video thumbnail"> <!-- Video Thumbnail Img -->
             </a>
         </div>
         <div class="col-lg-12 col-xl-7 game-card-right">
@@ -308,7 +308,7 @@
                 <div class="overlay">
                     <i class="fa fa-play fa-3x"></i>
                 </div>
-                <img src="images/placeholder.jpg" data-src="images/b_3.jpg" class="img-fluid b-lazy" alt="video thumbnail"> <!-- Video Thumbnail Img -->
+                <img src="images/placeholder.jpg" data-src="images/b_3.JPG" class="img-fluid b-lazy" alt="video thumbnail"> <!-- Video Thumbnail Img -->
             </a>
         </div>
         <div class="col-lg-12 col-xl-7 game-card-right">
