--- a/interior.html
+++ b/interior.html
@@ -349,7 +349,123 @@
 
 
 
+<div class="row tiny-margin">
+                <div class="col-md-11">
+                    <h2 class="short-hr-left">See all of our design</h2>
+                       </div>
+            </div>
+            <div class="grid-gallery">
+                <div class="row">
+                    <div class="col-md-4 gallery-item">
+                        <a href="interior/11.jpg" data-lightbox="studio_gallery">
+                            <div class="overlay gallery">
+                                <i class="fa fa-picture-o fa-3x"></i>
+                            </div>
+                            <img src="images/placeholder.jpg" data-src="interior/11.jpg" class="img-fluid b-lazy" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-4 gallery-item">
+                        <a href="interior/22.jpg" data-lightbox="studio_gallery">
+                            <div class="overlay gallery">
+                                <i class="fa fa-picture-o fa-3x"></i>
+                            </div>
+                            <img src="images/placeholder.jpg" data-src="interior/22.jpg" class="img-fluid b-lazy" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-4 gallery-item">
+                        <a href="interior/33.jpg" data-lightbox="studio_gallery">
+                            <div class="overlay gallery">
+                                <i class="fa fa-picture-o fa-3x"></i>
+                            </div>
+                            <img src="images/placeholder.jpg" data-src="interior/33.jpg" class="img-fluid b-lazy" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 gallery-item">
+                        <a href="interior/44.jpg" data-lightbox="studio_gallery">
+                            <div class="overlay gallery">
+                                <i class="fa fa-picture-o fa-3x"></i>
+                            </div>
+                            <img src="images/placeholder.jpg" data-src="interior/44.jpg" class="img-fluid b-lazy" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-4 gallery-item">
+                        <a href="interior/55.jpg" data-lightbox="studio_gallery">
+                            <div class="overlay gallery">
+                                <i class="fa fa-picture-o fa-3x"></i>
+                            </div>
+                            <img src="images/placeholder.jpg" data-src="interior/55.jpg" class="img-fluid b-lazy" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-4 gallery-item">
+                        <a href="interior/66.jpg" data-lightbox="studio_gallery">
+                            <div class="overlay gallery">
+                                <i class="fa fa-picture-o fa-3x"></i>
+                            </div>
+                            <img src="images/placeholder.jpg" data-src="interior/66.jpg" class="img-fluid b-lazy" alt="">
+                        </a>
+                    </div>
+                </div>
 
+<div class="row">
+                    <div class="col-md-4 gallery-item">
+                        <a href="interior/77.jpg" data-lightbox="studio_gallery">
+                            <div class="overlay gallery">
+                                <i class="fa fa-picture-o fa-3x"></i>
+                            </div>
+                            <img src="images/placeholder.jpg" data-src="interior/77.jpg" class="img-fluid b-lazy" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-4 gallery-item">
+                        <a href="interior/88.jpg" data-lightbox="studio_gallery">
+                            <div class="overlay gallery">
+                                <i class="fa fa-picture-o fa-3x"></i>
+                            </div>
+                            <img src="images/placeholder.jpg" data-src="interior/88.jpg" class="img-fluid b-lazy" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-4 gallery-item">
+                        <a href="interior/99.jpg" data-lightbox="studio_gallery">
+                            <div class="overlay gallery">
+                                <i class="fa fa-picture-o fa-3x"></i>
+                            </div>
+                            <img src="images/placeholder.jpg" data-src="interior/99.jpg" class="img-fluid b-lazy" alt="">
+                        </a>
+                    </div>
+                </div>
+
+
+
+<div class="row">
+                    <div class="col-md-4 gallery-item">
+                        <a href="interior/100.jpg" data-lightbox="studio_gallery">
+                            <div class="overlay gallery">
+                                <i class="fa fa-picture-o fa-3x"></i>
+                            </div>
+                            <img src="images/placeholder.jpg" data-src="interior/100.jpg" class="img-fluid b-lazy" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-4 gallery-item">
+                        <a href="interior/200.jpg" data-lightbox="studio_gallery">
+                            <div class="overlay gallery">
+                                <i class="fa fa-picture-o fa-3x"></i>
+                            </div>
+                            <img src="images/placeholder.jpg" data-src="interior/200.jpg" class="img-fluid b-lazy" alt="">
+                        </a>
+                    </div>
+                    <div class="col-md-4 gallery-item">
+                        <a href="interior/22.jpg" data-lightbox="studio_gallery">
+                            <div class="overlay gallery">
+                                <i class="fa fa-picture-o fa-3x"></i>
+                            </div>
+                            <img src="images/placeholder.jpg" data-src="interior/22.jpg" class="img-fluid b-lazy" alt="">
+                        </a>
+                    </div>
+                </div>
+
+
+            </div
 
 
 
