Interior Part Done _part1

--- a/index.html
+++ b/index.html
@@ -78,6 +78,29 @@
                 </button>
                 <!-- Navigation Links -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+
+
+
+
+                    <h3><span class="colored">This Website Under Development</h1>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    <h3 ></h3>
                     <ul class="navbar-nav ml-auto">
                        
                         <li class="nav-item">
@@ -116,7 +139,7 @@
             </div>
         </nav>
     </header><!-- Header End -->
-    
+
     <!-- /// HERO SECTION /// -->
     <div id="hero-section" class="small-margin">
         <div class="row hero-unit">
@@ -613,7 +636,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <p id="copyright">&copy; Atypical Themes <span id="year"> </span></p><!-- Copyright Text -->
+                        <p id="copyright">&copy; Fardin <span id="year"> </span></p><!-- Copyright Text -->
                         <ul class="social-links"> <!-- Social Media Icons -->
                             <li><a href="#"><i class="fa fa-facebook fa-lg icon-social"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter  fa-lg icon-social"></i></a></li>
@@ -622,6 +645,8 @@
                             <li><a href="#"><i class="fa fa-pinterest fa-lg icon-social"></i></a>
                             <li><a href="#"><i class="fa fa-instagram fa-lg icon-social"></i></a>
                         </ul>
+                        <h3><span class="colored">This Website Under Development</h1>
+                            <h3><span class="colored">This Website Under Development</h1>
                     </div>
                 </div>
             </div><!-- Container End -->
@@ -642,5 +667,4 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0K1n4Y5N2SwIeHETzvqP5ycEMdr-QLAA"></script>
 </body>
 
-<!-- Mirrored from www.atypicalthemes.com/portfolio/strider_demo/pages/StriderDark/Animated/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 Mar 2023 16:58:03 GMT -->
 </html>
