--- a/interior.html
+++ b/interior.html
@@ -349,6 +349,172 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- ALL SECTION-->
+
+
+<div class="row tiny-margin">
+    <div class="col-md-11">
+        <h2 class="short-hr-left">See Our Client Work</h2>
+           </div>
+</div>
+<div class="grid-gallery">
+    <div class="row">
+        <div class="col-md-4 gallery-item">
+            <a href="interior/1k.jpg" data-lightbox="studio_gallery">
+                <div class="overlay gallery">
+                    <i class="fa fa-picture-o fa-3x"></i>
+                </div>
+                <img src="images/placeholder.jpg" data-src="interior/1k.jpg" class="img-fluid b-lazy" alt="">
+            </a>
+        </div>
+        <div class="col-md-4 gallery-item">
+            <a href="interior/2k.jpg" data-lightbox="studio_gallery">
+                <div class="overlay gallery">
+                    <i class="fa fa-picture-o fa-3x"></i>
+                </div>
+                <img src="images/placeholder.jpg" data-src="interior/2k.jpg" class="img-fluid b-lazy" alt="">
+            </a>
+        </div>
+        <div class="col-md-4 gallery-item">
+            <a href="interior/3k.jpg" data-lightbox="studio_gallery">
+                <div class="overlay gallery">
+                    <i class="fa fa-picture-o fa-3x"></i>
+                </div>
+                <img src="images/placeholder.jpg" data-src="interior/3k.jpg" class="img-fluid b-lazy" alt="">
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4 gallery-item">
+            <a href="interior/4k.jpg" data-lightbox="studio_gallery">
+                <div class="overlay gallery">
+                    <i class="fa fa-picture-o fa-3x"></i>
+                </div>
+                <img src="images/placeholder.jpg" data-src="interior/4k.jpg" class="img-fluid b-lazy" alt="">
+            </a>
+        </div>
+        <div class="col-md-4 gallery-item">
+            <a href="interior/5k.jpg" data-lightbox="studio_gallery">
+                <div class="overlay gallery">
+                    <i class="fa fa-picture-o fa-3x"></i>
+                </div>
+                <img src="images/placeholder.jpg" data-src="interior/5k.jpg" class="img-fluid b-lazy" alt="">
+            </a>
+        </div>
+        <div class="col-md-4 gallery-item">
+            <a href="interior/6k.jpg" data-lightbox="studio_gallery">
+                <div class="overlay gallery">
+                    <i class="fa fa-picture-o fa-3x"></i>
+                </div>
+                <img src="images/placeholder.jpg" data-src="interior/6k.jpg" class="img-fluid b-lazy" alt="">
+            </a>
+        </div>
+    </div>
+
+<div class="row">
+        <div class="col-md-4 gallery-item">
+            <a href="interior/7k.jpg" data-lightbox="studio_gallery">
+                <div class="overlay gallery">
+                    <i class="fa fa-picture-o fa-3x"></i>
+                </div>
+                <img src="images/placeholder.jpg" data-src="interior/7k.jpg" class="img-fluid b-lazy" alt="">
+            </a>
+        </div>
+        <div class="col-md-4 gallery-item">
+            <a href="interior/8k.jpg" data-lightbox="studio_gallery">
+                <div class="overlay gallery">
+                    <i class="fa fa-picture-o fa-3x"></i>
+                </div>
+                <img src="images/placeholder.jpg" data-src="interior/8k.jpg" class="img-fluid b-lazy" alt="">
+            </a>
+        </div>
+        <div class="col-md-4 gallery-item">
+            <a href="interior/9k.jpg" data-lightbox="studio_gallery">
+                <div class="overlay gallery">
+                    <i class="fa fa-picture-o fa-3x"></i>
+                </div>
+                <img src="images/placeholder.jpg" data-src="interior/9k.jpg" class="img-fluid b-lazy" alt="">
+            </a>
+        </div>
+    </div>
+
+
+
+<div class="row">
+        <div class="col-md-4 gallery-item">
+            <a href="interior/10k.jpg" data-lightbox="studio_gallery">
+                <div class="overlay gallery">
+                    <i class="fa fa-picture-o fa-3x"></i>
+                </div>
+                <img src="images/placeholder.jpg" data-src="interior/10k.jpg" class="img-fluid b-lazy" alt="">
+            </a>
+        </div>
+        <div class="col-md-4 gallery-item">
+            <a href="interior/11k.jpg" data-lightbox="studio_gallery">
+                <div class="overlay gallery">
+                    <i class="fa fa-picture-o fa-3x"></i>
+                </div>
+                <img src="images/placeholder.jpg" data-src="interior/11k.jpg" class="img-fluid b-lazy" alt="">
+            </a>
+        </div>
+        <div class="col-md-4 gallery-item">
+            <a href="interior/12k.jpg" data-lightbox="studio_gallery">
+                <div class="overlay gallery">
+                    <i class="fa fa-picture-o fa-3x"></i>
+                </div>
+                <img src="images/placeholder.jpg" data-src="interior/12k.jpg" class="img-fluid b-lazy" alt="">
+            </a>
+        </div>
+    </div>
+
+
+</div
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- ALL SECTION-->
+
+
 <div class="row tiny-margin">
                 <div class="col-md-11">
                     <h2 class="short-hr-left">See all of our design</h2>
@@ -485,7 +651,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <p id="copyright">&copy; Atypical Themes <span id="year"> </span></p><!-- Copyright Text -->
+                        <p id="copyright">&copy; Fardin <span id="year"> </span></p><!-- Copyright Text -->
                         <ul class="social-links"> <!-- Social Media Icons -->
                             <li><a href="#"><i class="fa fa-facebook fa-lg icon-social"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter  fa-lg icon-social"></i></a></li>
@@ -514,5 +680,4 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0K1n4Y5N2SwIeHETzvqP5ycEMdr-QLAA"></script>
 </body>
 
-<!-- Mirrored from www.atypicalthemes.com/portfolio/strider_demo/pages/StriderDark/Animated/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 Mar 2023 16:58:03 GMT -->
 </html>
