--- a/interior.html
+++ b/interior.html
@@ -651,7 +651,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <p id="copyright">&copy; Fardin <span id="year"> </span></p><!-- Copyright Text -->
+                        <p id="copyright">&copy; Far <span id="year"> </span></p><!-- Copyright Text -->
                         <ul class="social-links"> <!-- Social Media Icons -->
                             <li><a href="#"><i class="fa fa-facebook fa-lg icon-social"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter  fa-lg icon-social"></i></a></li>
