Sakib Image Updated

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <div class="row">
                     <div class="col-md-4 gallery-item">
                         
-                            <img src="images/placeholder.jpg" data-src="rodrigo/rNasa1.jpg" class="img-fluid b-lazy" alt="">
+                            <img src="images/placeholder.jpg" data-src="rodrigo/rSakib1.jpg" class="img-fluid b-lazy" alt="">
                         
                     </div>
 
