--- a/index.html
+++ b/index.html
@@ -179,7 +179,14 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <p class="small-margin">We are a dedicated team of developers, designers, artists, programmers, and most importantly gaming enthusiasts</p>
+                    <p class="small-margin">We're RODRIGO.exe, VFX, Interior, Video Game & Animation company that provide you the magic for your work.
+
+                        We work in Unreal Engine, Blender, Z-Brush as well as experience with Houdini, 3D modelling, rendering, lighting, shading, rigging, texturing, scripting, tracking, and compositing.
+                        
+                        Join us in creating extraordinary games that captivate and inspire. We are the magic of your wand.
+                        
+                        Best regards,
+                        RODRIGO.exe</p>
                     <img id="awards" src="dev/f.jpg" class="img-fluid" alt="awads">
                 </div>
                 <div class="col-md-6">
