--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
             </a>
         </div>
         <div class="col-lg-12 col-xl-7 game-card-right">
-            <h2 class="short-hr-left">Till Death - Made with UE4 </h2>
+            <h2 class="short-hr-left">Untill Death - Made with UE4 </h2>
             <p class="tags"><span class="subtle">Action RPG | PC</span> </p>
             <p class="game-description">A Zombie Survival FPS Game <span class="expand colored strong" data-toggle="modal" data-target="#game1"></span></p>
             <div class="steam-btn">
