--- a/careers.html
+++ b/careers.html
@@ -193,8 +193,8 @@
                         <div class="row game-card pc new">
     
                             <div class="col-lg-12 col-xl-7 game-card-right">
-                                <h2 class="short-hr-left">Unreal Engine 5,Unity,Blender,Megascan </h2>
-                                <p class="tags"><span class="subtle">only at 1499 ৳.</span> </p>
+                                <h2 class="short-hr-left">ROAD TO GAME DEVELOPMENT</h2>
+                                <p class="tags"><span class="subtle">Pre-Order only at 499 ৳.</span> </p>
                                 <p class="game-description">© Copyright By RODRIGO.exe | All Rights Reserved
     
                                     The minimum requirements for the course are a 64-bit operating system (Windows 10 or updated), 8 GB of RAM, and a Direct3D 11 or any graphics card.
