--- a/index.html
+++ b/index.html
@@ -202,6 +202,13 @@
         
     </div><!-- Hero Section End -->
 
+    <style>
+    #bgvid {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }</style>
+
 
 <!-- /// HERO SECTION /// -->
 
