--- a/index.html
+++ b/index.html
@@ -624,6 +624,51 @@
 
 
 
+<!-- 5 -->
+<div class="games-portfolio ">
+    <!-- Game Card Video -->
+    <div class="row game-card pc new">
+
+
+
+
+        <div class="col-lg-12 col-xl-5 game-card-left">
+            <a href="#" class="js-video-button" data-video-id='FUKZo2ez8w8' data-channel="youtube"> <!-- Video link goes here -->
+                <div class="overlay">
+                    <i class="fa fa-play fa-3x"></i>
+                </div>
+                <img src="images/placeholder.jpg" data-src="images/untill.jpg" class="img-fluid b-lazy" alt="video thumbnail"> <!-- Video Thumbnail Img -->
+            </a>
+        </div>
+        <div class="col-lg-12 col-xl-7 game-card-right">
+            <h2 class="short-hr-left">Untill Death - Made with UE4 </h2>
+            <p class="tags"><span class="subtle">Action RPG | PC</span> </p>
+            <p class="game-description">A TPS Action Shooter Gamer<span class="expand colored strong" data-toggle="modal" data-target="#game1"></span></p>
+            <div class="steam-btn">
+                <a href="#">
+                    <i class="fa fa-youtube fa-3x"></i>
+                    <p>Watch The<br><span class="spaced">Reel</span></p>
+                </a>
+            </div>
+            <div class="reviews">
+                <a href="#"><div class="score-card">
+                    <p class="score">11 Hour</p>
+                    <p>Work Time</p>
+                </div></a>
+                <a href="#"><div class="score-card">
+                    <p class="score">Custom Made Asset</p>
+                    <p>Asset</p>
+                </div></a>
+                <a href="#"><div class="score-card">
+                    <p class="score">100%</p>
+                    <p>Progress</p>
+                </div></a>
+            </div>
+        </div>
+      
+        
+    </div>
+<!-- 5 End -->
 
 
 
@@ -646,7 +691,7 @@
             </a>
         </div>
         <div class="col-lg-12 col-xl-7 game-card-right">
-            <h2 class="short-hr-left">Untill Death - Made with UE4 </h2>
+            <h2 class="short-hr-left">A Zombie Battle Royale - Made with UE4 </h2>
             <p class="tags"><span class="subtle">Action RPG | PC</span> </p>
             <p class="game-description">A Zombie Survival FPS Game <span class="expand colored strong" data-toggle="modal" data-target="#game1"></span></p>
             <div class="steam-btn">
@@ -672,6 +717,7 @@
         </div> 
     </div>
 </div><!-- Game Card End -->
+
             </div>
         </div>
         <!-- /// TEAM SECTION /// -->
